force-app/main/default/objects/ConsultasRC__c/ConsultasRC__c.object-meta.xml
<CustomObject>
    <label>Consultas RC</label>
    <nameField>
        <label>Nombre de Consultas RC</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consultas RC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>