force-app/main/default/objects/ConsultasRC__c/fields/IdsConsulta__c.field-meta.xml
<CustomField>
    <fullName>IdsConsulta__c</fullName>
    <label>Id Consulta</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>