force-app/main/default/objects/ConsultasRC__c/fields/NumPagina__c.field-meta.xml
<CustomField>
    <fullName>NumPagina__c</fullName>
    <label>Num Página</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>